Jack first changes

--- a/asahiarticle.html
+++ b/asahiarticle.html
@@ -17,7 +17,9 @@
         This inhibits hobbyists, such as the team over at Asahi, to express their creativity. As many hobbyists have come 
         to find out though, cracking this end-to-end control is part of the fun. From jailbreaking iPhones to installing a 
         completely separate operating system not intended for the device, it seems as if Developers and Hardware hobbyists 
-        enjoy the challenge and the prestige that comes from using Apple’s hardware in unintended ways. To highlight the power of 
+        enjoy the challenge and the prestige that comes from using Apple’s hardware in unintended ways. Thus, Asahi Linux brings a lot to the
+        table as few believed a Linux port of this degree was even possible on a Mac device without going through Apple directly as Apple Silicon
+        has no documentation and thus the the Apple GPU architecture had to be completely reverse engineered. To highlight the power of 
         Apple’s hardware and the versatility of Linux, the remainder of this article will be dedicated to the installation of Asahi 
         Linux, the hurdles of the process, and the experiences of myself using the alternative OS and the experiences of others. 
     </p>
@@ -27,7 +29,9 @@
         <p>
             I would like to focus on the installation experience for a moment. Navigating to the Asahi Linux website, asahilinux.org, 
             you will be greeted with a bunch of information about the project. There is some general information about the project: 
-            Where the name comes from, is this legal, some of their developers, their social media, etc. The installation material can 
+            Where the name comes from, is this legal, some of their developers, their social media, etc. Through navigating this site you can learn
+            a lot about the team and the reason for the project as well as how you can support them and where you can learn more information and stay involved
+            with all the happenings of the projects and the team members themselves. Furthermore, the installation material can 
             be found in a blog post in the middle of the page. Once there, a provided ‘curl’ command provides the necessary information 
             to get started. 
         </p>
