--- a/asahiarticle.html
+++ b/asahiarticle.html
@@ -134,7 +134,7 @@
 
     <div class="block">
         <h3>The Aftermath</h3>
-        <p>I have been a windows user for about as long as I can remember. I grew up with Vista and 7, eventually making my way to 10 when it came out. 
+        <p>I have been a Windows user for about as long as I can remember. I grew up with Vista and 7, eventually making my way to 10 when it came out. 
             I would play games, do school projects, etc on a windows machine. Windows, to me, has always been a safety net to learning about computers. 
             You can always do whatever need to do, on a windows machine. I never really had a family member who had, or used a Apple machine. There was a 
             hort amount of time when my family had a Apple Mini computer, but that was quickly thrown out for just being a terrible computer. I know how to use 
